# buildings-as-thermal-batteries

./: README.md
experiment/controller/: controller_service.py  fcr_service.py  main.py  prices_service.py  smart_plug_service.py  thermometer_service.py  weather_service.py
experiment/results/: plots.ipynb
notebooks/: pyproject.toml
notebooks/data/raw/: construction_year_sq.csv  heat_pump_or_electric_built_year.csv  heat_pump_or_electric_built_year_README.md  heat_pumps_sqm.csv  heat_pumps_sqm_README.md  prices.csv
notebooks/notebooks/: experiment_scaling_simulation.ipynb  national_potential.ipynb  prices_emissions_correlation.ipynb  vpp_qualification.ipynb
notebooks/results/national/: all_simulation_results.csv  national_summary.csv
notebooks/results/simulation/: simulation_results.csv
