[project]
name = "processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "gymnasium>=1.2.1",
    "iprogress>=0.4",
    "lightning>=2.5.5",
    "matplotlib>=3.10.6",
    "nbformat>=5.10.4",
    "numpy<2.3",
    "optuna>=4.5.0",
    "pandas>=2.3.2",
    "pandas-stubs>=2.3.2.250827",
    "plotly>=6.3.0",
    "prophet>=1.1.7",
    "pytorch-forecasting>=1.4.0",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "stable-baselines3>=2.7.0",
    "tensorflow>=2.18.0",
    "tensorflow-metal>=1.2.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "types-tensorflow>=2.18.0.20250809",
    "xgboost>=3.0.5",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
